Fix splash overflow

--- a/static/splash.css
+++ b/static/splash.css
@@ -1,4 +1,4 @@
-html {
+html#splash_enabled {
     overflow: hidden;
 }
 @keyframes orbitale_logo_rotation {
